--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -17,9 +20,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "server-only": "^0.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.16.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
