--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@tanstack/react-query": "^5.50.1",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
