--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
+    "next-intl": "^3.15.5",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "server-only": "^0.0.1",
@@ -33,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^14.2.5",
     "sass": "^1.77.6",
     "typescript": "^5"
   }
