--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
     "server-only": "^0.0.1",
     "yup": "^1.4.0"
