implemented new checkbox with aniamtion

--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,12 @@
           "text-decoration-thickness"
         ]
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
