--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tanstack/react-query": "^5.50.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.0",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "next": "^14.2.5",
+    "next-cloudinary": "^6.13.0",
     "next-intl": "^3.15.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
